@@ -332,7 +332,7 @@ commandMap = {
         "poweroff": reboot.FC6_Reboot,
         "raid": raid.F7_Raid,
         "reboot": reboot.FC6_Reboot,
-        "repo": repo.FC6_Repo,
+        "repo": repo.F8_Repo,
         "rootpw": rootpw.F8_RootPw,
         "selinux": selinux.FC3_SELinux,
         "services": services.FC6_Services,
@@ -576,7 +576,7 @@ dataMap = {
         "NetworkData": network.FC6_NetworkData,
         "PartData": partition.FC4_PartData,
         "RaidData": raid.F7_RaidData,
-        "RepoData": repo.FC6_RepoData,
+        "RepoData": repo.F8_RepoData,
         "UserData": user.F8_UserData,
         "VolGroupData": volgroup.FC3_VolGroupData,
         "ZFCPData": zfcp.FC3_ZFCPData,
